add file upload max size, gcloud auth instructions + rename controller

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ micronaut:
   server:
     cors:
         enabled: true
+    multipart:
+      max-file-size: 100MB
   object-storage:
     gcp:
       default:
