--- a/build.gradle
+++ b/build.gradle
@@ -64,4 +64,17 @@ micronaut {
     }
 }
 
+jar {
+    manifest {
+        attributes(
+            'Main-Class': 'com.retrogram.Application'
+        )
+    }
+}
 
+shadowJar {
+    mergeServiceFiles()
+    manifest {
+        attributes 'Main-Class': 'com.retrogram.Application'
+    }
+}
