--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,58 @@ out/
 .settings
 .classpath
 .factorypath
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+retrogram-api
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool
+*.out
+
+# Go workspace file
+go.work
+
+# Dependency directories
+/vendor/
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test.local
+.env.production
+
+# IDE files
+.vscode/
+.idea/
+*.iml
+*.ipr
+*.iws
+.project
+.settings
+.classpath
+.factorypath
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temp files
+/tmp
+.tmp
+Thumbs.db
+
+# Build output
+/build/
+/bin/
+/target/
+/out/
